ENG-2283 #comment fix z-index react-color and error prop (#782)
* ENG-2283 #comment add new component SelectColor

* ENG-2283 #comment add new component SelectColor

* ENG-2283 #comment add new component form/SelectColor

* ENG-2283 #comment fix z-index react-color and error prop

* ENG-2283 #comment add direct placeholder prop

* ENG-2283 #comment add sm width to react-color

--- a/src/assets/sass/components/_selectColor.scss
+++ b/src/assets/sass/components/_selectColor.scss
@@ -49,11 +49,18 @@
   .twitter-picker {
     position: absolute !important;
     right: 0;
+    z-index: 1;
   }
 
   &.error {
     .twitter-picker {
       margin-top: -30px;
+    }
+  }
+
+  &.size-sm {
+    .twitter-picker {
+      width: 230px !important;
     }
   }
 }
